# mlops_alimiji1

./: .dockerignore  .env.example  .gitignore  .~lock.extraction_commandes_dvc.docx#  DEPLOYMENT.md  Dockerfile  Makefile  README.md  README_HF.md  docker-compose.yml  dvc.yaml  dvc_mlops.json  error.txt  extraction_commandes_dvc.docx  metrics.json  params.yaml  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.dvc/: config
.github/workflows/: cd_api.yml  ci.yml  dvc_pipeline.yml  hf_spaces.yml  mlflow.yml  model-validation-gate.yml  streamlit.yml
docs/: workflow_test_results.md
monitoring/: prometheus.yml
notebooks/: data_exploration.ipynb
src/api/: __init__.py  main.py  schemas.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: evaluate_model.py  train_model.py
src/validation/: __init__.py  data_validator.py
streamlit_app/: Dockerfile  app.py  requirements.txt
streamlit_app/.streamlit/: config.toml  secrets.toml.example
streamlit_app/components/: __init__.py  charts.py  header.py  sidebar.py
streamlit_app/pages/: 1_Predictions.py  2_Dashboard.py  3_Monitoring.py  4_Historique.py
streamlit_app/utils/: __init__.py  api_client.py  config.py
tests/: conftest.py  test_api.py  test_data_pipeline.py  test_model.py
